# tap-stella-connect

./: LICENSE  README.md  greenlet-3.0.1-cp37-cp37m-macosx_10_9_x86_64.whl  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_stella_connect/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
