[tool.poetry]
name = "tap-stella-connect"
version = "0.0.1"
description = "`tap-stella-connect` is a Singer tap for TapStellaConnect, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Jong Lee <jong@hotglue.io>"]
keywords = [
    "ELT",
    "TapStellaConnect",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
singer-sdk = { version="=0.4.1" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.31.0"
cached-property = "~=1" # Remove after Python 3.7 support is dropped

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="=0.4.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.7"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_stella_connect"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_stella_connect"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-stella-connect = 'tap_stella_connect.tap:TapTapStellaConnect.cli'
